@@ -51,20 +51,6 @@
         <!-- -->
         <profile>
             <id>kuali-test</id>
-            <reporting>
-                <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>cobertura-maven-plugin</artifactId>
-                    <version>2.5.1</version>
-                    <configuration>
-                        <formats>
-                            <format>xml</format>
-                        </formats>
-                    </configuration>
-                </plugin>
-                </plugins>
-            </reporting>
             <build>
                 <plugins>
                     <!-- -->
@@ -242,12 +228,6 @@
             <artifactId>jetty</artifactId>
             <version>6.1.25</version>
         </dependency>
-    	<dependency>
-      		<groupId>com.google.code.gson</groupId>
-      		<artifactId>gson</artifactId>
-      		<version>1.7.1</version>
-      		<scope>compile</scope>
-    	</dependency>
         <dependency>
             <groupId>org.kuali.rice</groupId>
             <artifactId>rice-api</artifactId>
@@ -339,6 +319,12 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
+      		<groupId>com.google.code.gson</groupId>
+      		<artifactId>gson</artifactId>
+      		<version>1.7.1</version>
+      		<scope>compile</scope>
+    	</dependency>
+        <dependency>
             <groupId>displaytag</groupId>
             <artifactId>displaytag-export-poi</artifactId>
             <version>1.1.1</version>
@@ -417,7 +403,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>-Xms1024m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
                     <!--
                          <excludes>
                              <exclude>**/*</exclude>
